--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wordpress"]
 	path = wordpress
 	url = git://github.com/WordPress/WordPress.git
+[submodule "wp-content/themes/bars2013/js/fancybox"]
+	path = wp-content/themes/bars2013/js/fancybox
+	url = https://github.com/fancyapps/fancyBox.git
