--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "wordpress"]
 	path = wordpress
 	url = https://github.com/WordPress/WordPress.git
+[submodule "wp-content/themes/bars2013/js/jquery-validation"]
+	path = wp-content/themes/bars2013/js/jquery-validation
+	url = https://github.com/jzaefferer/jquery-validation.git
