--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "wp-content/themes/bars2013/js/jquery-validation"]
 	path = wp-content/themes/bars2013/js/jquery-validation
 	url = https://github.com/jzaefferer/jquery-validation.git
+[submodule "wp-content/themes/bars2013/js/jquery-form-plugin"]
+	path = wp-content/themes/bars2013/js/jquery-form-plugin
+	url = https://github.com/malsup/form.git
