Added jQuery.dotdotdot as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "wp-content/themes/bars2013/js/imgliquid"]
 	path = wp-content/themes/bars2013/js/imgliquid
 	url = https://github.com/karacas/imgLiquid.git
+[submodule "wp-content/themes/bars2013/js/jquery-dotdotdot"]
+	path = wp-content/themes/bars2013/js/jquery-dotdotdot
+	url = https://github.com/BeSite/jQuery.dotdotdot.git
