Added send email functionality. TODO: body html, form input sanitizing/validations

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = wordpress
 	url = https://github.com/WordPress/WordPress.git
 
+[submodule "php/phpmailer"]
+	path = php/phpmailer
+	url = https://github.com/PHPMailer/PHPMailer.git
