--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0"
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-newer": "^0.7.0",
+    "grunt-usemin": "^2.1.1"
   }
 }
