Various fixes and bars edition refactor (extracted to JSON)

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phpmailer/phpmailer": "dev-master"
+        "phpmailer/phpmailer": "dev-master",
+        "anahkiasen/underscore-php" : "dev-master"
     }
 }
