--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   "gruntfile": "Gruntfile.js",
   "devDependencies": {
     "grunt": "^0.4.4",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-imagemin": "^0.6.1",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-newer": "^0.7.0",
+    "grunt-spritesmith": "^6.3.1",
     "grunt-usemin": "^2.1.1"
   }
 }
