--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "less": "^4.2.0",
     "lodash": "^4.12.0",
     "npm-run-all": "^2.3.0",
+    "prettier": "3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
