Add SC theme PLUS import reordering

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "printWidth": 100,
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": true,
+
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": ["^[./]"]
 }
