--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@rollup/plugin-inject": "^5.0.5",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react-dom": "^18.2.15",
     "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.1.1",
