--- a/package.json
+++ b/package.json
@@ -42,22 +42,29 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@rollup/plugin-inject": "^5.0.5",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react-dom": "^18.2.15",
     "@types/react-modal": "^3.16.3",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "@vitejs/plugin-react": "^4.1.1",
     "cpx": "^1.3.1",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "fancybox": "^3.0.0",
     "fetch-jsonp": "^1.3.0",
     "jquery": "^2.2.3",
     "jquery-focuspoint": "^1.1.3",
     "jquery-form": "^4.3.0",
     "jquery-validation": "^1.15.0",
-    "jquery.dotdotdot": "^1.8.0",
     "less": "^4.2.0",
     "lodash": "^4.12.0",
     "npm-run-all": "^2.3.0",
-    "prettier": "3.1.0",
+    "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
