--- a/themes/bars2026/package.json
+++ b/themes/bars2026/package.json
@@ -29,12 +29,14 @@
     "watch:resources": "npm run copy:resources -- --watch --verbose"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.24",
     "cpx": "^1.3.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
@@ -44,10 +46,12 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "npm-run-all": "^2.3.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rimraf": "^5.0.9",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   }
