Programming page + add FDSS category to short film N° calculation

--- a/themes/bars2026/package.json
+++ b/themes/bars2026/package.json
@@ -17,8 +17,10 @@
     "clean": "rimraf ../../wp-themes/bars2026/* --glob",
     "dev": "npm-run-all clean --parallel dev:** watch:**",
     "dev:main": "npm run build:main -- --watch",
+    "dev:selection": "npm run build:selection -- --watch",
     "build": "npm-run-all clean --parallel build:** copy:**",
     "build:main": "vite build --config vite/vite.config.ts",
+    "build:selection": "vite build --config vite/selection.vite.config.ts",
     "copy:php": "cpx \"$npm_package_config_php\" $npm_package_config_dest",
     "copy:shared-php": "cpx \"$npm_package_config_sharedPhp\" $npm_package_config_dest",
     "copy:editions": "cpx \"$npm_package_config_editions\" $npm_package_config_dest",
