Upgrade to node 22 (lts) + add deploy scripts (ftp)

--- a/.env-example
+++ b/.env-example
@@ -14,3 +14,10 @@ WORDPRESS_ADMIN_LASTNAME=McAdmin
 WORDPRESS_ADMIN_EMAIL=amcadmin@bars.dev
 WORDPRESS_ADMIN_USERNAME=admin
 WORDPRESS_ADMIN_PASSWORD=admin
+
+# FTP Deploy (used by npm run deploy:*)
+FTP_HOST=
+FTP_USER=
+FTP_PASS=
+FTP_PORT=21
+FTP_REMOTE_BASE=/2.0/wp-content/
