Added download script + improved deploy script with timestamp and percentage

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "deploy:plugins": "node --env-file=.env scripts/deploy.mjs plugins",
     "deploy:bars2013": "node --env-file=.env scripts/deploy.mjs bars2013",
     "deploy:bars2026": "node --env-file=.env scripts/deploy.mjs bars2026",
-    "deploy": "node --env-file=.env scripts/deploy.mjs all"
+    "deploy": "node --env-file=.env scripts/deploy.mjs all",
+    "download:assets": "node --env-file=.env scripts/download-assets.mjs"
   },
   "devDependencies": {
     "basic-ftp": "^5.1.0"
