--- a/themes/bars2026/package.json
+++ b/themes/bars2026/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^19.0.0",
     "rimraf": "^5.0.9",
     "tailwindcss": "^4.1.18",
+    "terser": "^5.46.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   }
