Vitest setup with ~141 test related to @shared/ts functions

--- a/themes/bars2026/tsconfig.json
+++ b/themes/bars2026/tsconfig.json
@@ -6,6 +6,6 @@
       "@shared/*": ["../../shared/*"]
     }
   },
-  "include": ["ts/**/*", "vite/**/*", "../../shared/ts/selection/window.d.ts"],
+  "include": ["ts/**/*", "vite/**/*", "../../shared/ts/**/*"],
   "exclude": ["node_modules", "vendor"]
 }
