--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dev:bars2026": "npm run dev -w themes/bars2026",
     "build:bars2026": "npm run build -w themes/bars2026",
     "lint:bars2026": "npm run lint -w themes/bars2026",
+    "test:bars2026": "npm run test -w themes/bars2026",
     "clean:plugins": "rimraf \"wp-plugins/bars-commons/*\" \"wp-plugins/jury-post-type/*\" \"wp-plugins/movie-post-type/*\" --glob",
     "copy:plugins": "cpx \"$npm_package_config_pluginsSrc\" $npm_package_config_pluginsDest",
     "watch:plugins": "npm run copy:plugins -- --watch --verbose",
