--- a/themes/bars2026/package.json
+++ b/themes/bars2026/package.json
@@ -28,10 +28,15 @@
     "watch:php": "npm run copy:php -- --watch --verbose",
     "watch:shared-php": "npm run copy:shared-php -- --watch --verbose",
     "watch:editions": "npm run copy:editions -- --watch --verbose",
-    "watch:resources": "npm run copy:resources -- --watch --verbose"
+    "watch:resources": "npm run copy:resources -- --watch --verbose",
+    "test": "vitest run --config vitest.config.ts",
+    "test:watch": "vitest --config vitest.config.ts",
+    "test:coverage": "vitest run --config vitest.config.ts --coverage"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
@@ -47,6 +52,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "jsdom": "^28.1.0",
     "npm-run-all": "^2.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.1.0",
@@ -56,6 +62,7 @@
     "tailwindcss": "^4.1.18",
     "terser": "^5.46.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vitest": "^1.6.1"
   }
 }
